// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
  hola
</div>
`;

exports[`ProductImage debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  hola
</div>
`;
